2005-11-13  Werner Koch  <wk@g10code.com>

	* cert.c (ksba_cert_set_user_data): Fixed.
	* ksba.h (ksba_cert_set_user_data, ksba_cert_get_user_data): Add
	prototypes.

2005-11-11  Werner Koch  <wk@g10code.com>

	* cert.h (struct cert_user_data): New.
	(struct ksba_cert_s): New field UDATA.
	* cert.c (ksba_cert_release): Release the UDATA list.
	(ksba_cert_set_user_data, ksba_cert_get_user_data): New.
	* libksba.vers:  Add the new functions.

2005-09-28  Marcus Brinkmann  <marcus@g10code.de>

	* Makefile.am (AM_CCPFLAGS): Renamed to AM_CPPFLAGS.

2005-07-21  Werner Koch  <wk@g10code.com>

	* certreq.h (struct general_names_s): New.
	(struct ksba_certreq_s): New member SUBJECT_ALT_NAMES.
	* certreq.c (ksba_certreq_release): Free it.
	(add_general_names_to_extn): New.
	(build_cri): And build them here.

	* cert.c (get_name): Support dNSName and uRI.
	* certreq.c (ksba_certreq_add_subject): Ditto.

2005-06-15  Werner Koch  <wk@g10code.com>

	* ksba.h, certreq.c (ksba_certreq_add_extension): Changed arg DER from
	unsigned char* to void*.
	* ksba.h, cms.c (ksba_cms_set_content_enc_algo): Changed arg IV
	from unsigned char* to void*.
	* ksba.h, cms.c (ksba_cms_get_content_enc_iv): Ditto.
	* ksba.h, cms.c (ksba_cms_set_message_digest): Changed arg DIGEST
	from char* to unsigned char*.

2005-06-02  Werner Koch  <wk@g10code.com>

	* Makefile.am: Add flags for gnulib.
	* asn1-func.c: Include alloca.h.

2005-04-20  Werner Koch  <wk@g10code.com>

	* time.c (_ksba_asntime_to_iso): Add arg IS_UTCTIME to allow for
	UTCTimes w/o seconds.
	* ocsp.c (parse_asntime_into_isotime): Set this arg.
	* crl.c (parse_to_next_update, parse_crl_entry): Ditto.
	* cert.c (ksba_cert_get_validity): Ditto.

2005-04-19  Werner Koch  <wk@g10code.com>

	* Makefile.am: Don't have asn1-tables depend on built tools.

	* ocsp.c (ksba_ocsp_set_nonce): Set the length of the nonce.
	(write_request_extensions): New.
	(ksba_ocsp_prepare_request): Call new function.

2005-04-18  Werner Koch  <wk@g10code.com>
