@@ -1,3 +1,8 @@
+2006-03-20  Werner Koch  <wk@g10code.com>
+
+	* ber-decoder.c: Dump debug info always to stderr and not to stdout.
+	(decoder_next): Take zero length SETs into account.
+
 2005-11-13  Werner Koch  <wk@g10code.com>
 
 	* cert.c (ksba_cert_set_user_data): Fixed.
